--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <title>
 Bee Movie
 </title>
-<link type="text/css" rel="stylesheet" href="BeeMovieStyle.css" />
+<link type="text/css" rel="stylesheet" href="Findingnemo.css" />
 </head>
 <body>
 
