--- a/index.htm
+++ b/index.htm
@@ -3,15 +3,14 @@
 <html>
 <head>
 <title>
-Bee Movie
+Design Tips
 </title>
 <link type="text/css" rel="stylesheet" href="Findingnemo.css" />
 </head>
 <body>
 
 <div id="header">
-
-<img src="beemovielogo.jpg">
+<h3>Design Tips</h3>
 
 </div>
 
