--- a/principles.htm
+++ b/principles.htm
@@ -3,15 +3,14 @@
 <html>
 <head>
 <title>
-Bee Movie
+Principles
 </title>
 <link type="text/css" rel="stylesheet" href="Findingnemo.css" />
 </head>
 <body>
 
 <div id="header">
-
-<img src="beemovielogo.jpg">
+<h3>Design Tips</h3>
 
 </div>
 
@@ -19,12 +18,14 @@ Bee Movie
 
 <ul>
 
-<li><a href="BeeMovie.html">Home</a></li>
-<li><a href="BeeMoviejazz.html">Jazz</a></li>
-<li><a href="characterspage.html">Characters</a></li>
-<li><a href="BeeMoviemovie.html">Movie</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="principles.html">Principles</a></li>
+<li><a href="platform.html">Platform</a></li>
+<li><a href="images.html">Images</a></li>
+<li><a href="resources.html">Resources</a></li>
+<li><a href="usable.html">Usable</a></li>
+<li><a href="web.html">Web</a></li>
 
-</ul>
 
 </div>
 
@@ -60,7 +61,7 @@ Bee Movie
 <audio id="audio_play">
     <source src="White power.mp3" type="audio/mp3" />
 </audio>
-<img class="imagesidebar" src="clickforjazz.jpg" height="300px" onClick="document.getElementById('audio_play').play(); return false;" />
+<img class="imagesidebar" src="designprinciples.jpg" height="300px"/>
 
 
 </div>
@@ -68,13 +69,22 @@ Bee Movie
 <div class="main">
 
 
-<h1>Jazz</h1> 
+<h1>White Space</h1> 
 
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady.</p>
+<p>
 
-<p></p>
+</p>
 
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady. Berry has a crush on the women from the first moment he laid eyes on here.</p>
+<h1>Colors</h1>
+<p>
+
+</p>
+
+<h1>Fonts</h1>
+
+<p>
+
+</p>
 
 
 
@@ -87,13 +97,12 @@ Bee Movie
 <ul>
 
 <li><a href="">Home</a></li>
-<li><a href="">Characters </a></li>
-<li><a href="">Bee movie</a></li>
-<li><a href="">Jazz</a></li>
-<li><a href="">Movie</a></li>
+<li><a href="">Design</a></li>
+<li><a href="">Tips</a></li>
+<li><a href="">About</a></li>
 </ul>
 
-&copy; 2020 yalikejazz.gov All Rights Reserved
+&copy; 2020 designtips.gov All Rights Reserved
 
 </div>
 
