--- a/web.htm
+++ b/web.htm
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Bee Movie
+Web Specific Issues
 </title>
 <link type="text/css" rel="stylesheet" href="Findingnemo.css" />
 </head>
@@ -11,7 +11,7 @@ Bee Movie
 
 <div id="header">
 
-<img src="beemovielogo.jpg">
+<img src=".jpg">
 
 </div>
 
@@ -19,10 +19,13 @@ Bee Movie
 
 <ul>
 
-<li><a href="BeeMovie.html">Home</a></li>
-<li><a href="BeeMoviejazz.html">Jazz</a></li>
-<li><a href="characterspage.html">Characters</a></li>
-<li><a href="BeeMoviemovie.html">Movie</a></li>
+<li><a href="index.htm">Home</a></li>
+<li><a href="principles.htm">Design Principles</a></li>
+<li><a href="platform.htm">Cross Platform Issues</a></li>
+<li><a href="images.htm">Image Use</a></li>
+<li><a href="usable.htm">Accessible and Usable</a></li>
+<li><a href="web.htm">Web Specific Issues</a></li>
+<li><a href="resources.htm">Design Resources</a></li>
 
 </ul>
 
