--- a/web.htm
+++ b/web.htm
@@ -34,36 +34,34 @@ Web Specific Issues
 <div class="sideright">
 
 
-<h2>Cool Jazz</h2>
+<h2></h2>
 
 <ul>
-<li><a href="https://www.youtube.com/watch?v=YyCAEcXcXL4" link="white" vlink="pink" alink="yellow">Do You Like Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=2S3mlXP8SKU" link="white" vlink="pink" alink="yellow">Jazz Music</a></li>
-<li><a href="https://www.youtube.com/watch?v=DW10gU0Rr1M" link="white" vlink="pink" alink="yellow">More Jazz Music</a></li>
+<li></li>
+<li></li>
+<li></li>
 
 </ul>
 
 
-<h2>Types of Jazz</h2>
+<h2></h2>
 </div>
 <div class="sideright">
 
-<h2>Different Types of Jazz</h2>
+<h2></h2>
 
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/List_of_jazz_genres" link="white" vlink="pink" alink="yellow">Jazz?</a></li>
-<li><a href="https://www.youtube.com/watch?v=VIl7H40l3mo" link="white" vlink="pink" alink="yellow">Guitar Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=XX5cz6PLm3w" link="white" vlink="pink" alink="yellow">Key Board Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=k3_tw44QsZQ" link="white" vlink="pink" alink="yellow">Saxophone Jazz</a></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
 </ul>
 
 </div>
 
 <div>
-<audio id="audio_play">
-    <source src="White power.mp3" type="audio/mp3" />
-</audio>
-<img class="imagesidebar" src="clickforjazz.jpg" height="300px" onClick="document.getElementById('audio_play').play(); return false;" />
+
+<img class="imagesidebar" src=".jpg" >
 
 
 </div>
@@ -71,13 +69,15 @@ Web Specific Issues
 <div class="main">
 
 
-<h1>Jazz</h1> 
-
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady.</p>
+<h1></h1> 
 
 <p></p>
 
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady. Berry has a crush on the women from the first moment he laid eyes on here.</p>
+<p>
+</p>
+
+<p>
+</p>
 
 
 
@@ -90,13 +90,13 @@ Web Specific Issues
 <ul>
 
 <li><a href="">Home</a></li>
-<li><a href="">Characters </a></li>
-<li><a href="">Bee movie</a></li>
-<li><a href="">Jazz</a></li>
-<li><a href="">Movie</a></li>
+<li><a href=""> Design </a></li>
+<li><a href="">Tips</a></li>
+<li><a href="">About</a></li>
+
 </ul>
 
-&copy; 2020 yalikejazz.gov All Rights Reserved
+&copy; 2020 designtips.gov All Rights Reserved
 
 </div>
 
