--- a/principles.htm
+++ b/principles.htm
@@ -18,13 +18,13 @@ Principles
 
 <ul>
 
-<li><a href="index.html">Home</a></li>
-<li><a href="principles.html">Principles</a></li>
-<li><a href="platform.html">Platform</a></li>
-<li><a href="images.html">Images</a></li>
-<li><a href="resources.html">Resources</a></li>
-<li><a href="usable.html">Usable</a></li>
-<li><a href="web.html">Web</a></li>
+<li><a href="index.htm">Home</a></li>
+<li><a href="principles.htm">Principles</a></li>
+<li><a href="platform.htm">Platform</a></li>
+<li><a href="images.htm">Images</a></li>
+<li><a href="resources.htm">Resources</a></li>
+<li><a href="usable.htm">Usable</a></li>
+<li><a href="web.htm">Web</a></li>
 
 
 </div>
