--- a/principles.htm
+++ b/principles.htm
@@ -32,35 +32,16 @@ Principles
 <div class="sideright">
 
 
-<h2>Cool Jazz</h2>
+<h2>Types of Principles</h2>
+<li>White Space</li>
+<li>Colors</li>
+<li>Fonts</li>
 
-<ul>
-<li><a href="https://www.youtube.com/watch?v=YyCAEcXcXL4" link="white" vlink="pink" alink="yellow">Do You Like Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=2S3mlXP8SKU" link="white" vlink="pink" alink="yellow">Jazz Music</a></li>
-<li><a href="https://www.youtube.com/watch?v=DW10gU0Rr1M" link="white" vlink="pink" alink="yellow">More Jazz Music</a></li>
-
-</ul>
-
-
-<h2>Types of Jazz</h2>
-</div>
-<div class="sideright">
-
-<h2>Different Types of Jazz</h2>
-
-<ul>
-<li><a href="https://en.wikipedia.org/wiki/List_of_jazz_genres" link="white" vlink="pink" alink="yellow">Jazz?</a></li>
-<li><a href="https://www.youtube.com/watch?v=VIl7H40l3mo" link="white" vlink="pink" alink="yellow">Guitar Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=XX5cz6PLm3w" link="white" vlink="pink" alink="yellow">Key Board Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=k3_tw44QsZQ" link="white" vlink="pink" alink="yellow">Saxophone Jazz</a></li>
-</ul>
 
 </div>
+
 
 <div>
-<audio id="audio_play">
-    <source src="White power.mp3" type="audio/mp3" />
-</audio>
 <img class="imagesidebar" src="designprinciples.jpg" height="300px"/>
 
 
@@ -72,18 +53,32 @@ Principles
 <h1>White Space</h1> 
 
 <p>
-
+White space is any blank space on a web page. It can be a good and a bad thing to have white space. You don't want too much or the page looks blank. You also want some so the page doesn't look blank. 
 </p>
 
 <h1>Colors</h1>
-<p>
-
+<p>Meaning of colors
+<br />
+Red - strength, power, passion, desire. 
+<br />
+Yellow - happines, energy, intelligence
+<br />
+Orange - combo of red & yellow
+<br />
+Blue - calm, trust, confidence, wisdom, intelligence
+<br />
+Green - growth, harmony, nature, money
+<br />
+Purple - power, royalty, luxury, mystery, creativity
+<br />
+Black - power, elegance, death
+<br />
 </p>
 
 <h1>Fonts</h1>
 
 <p>
-
+The fonts need to be easy to read and large enough to see. The style needs to fit what audience is going to be seeing the webpage. A good style to use is sans sefiff font. 
 </p>
 
 
