--- a/resources.htm
+++ b/resources.htm
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Bee Movie
+Resources
 </title>
 <link type="text/css" rel="stylesheet" href="Findingnemo.css" />
 </head>
@@ -11,7 +11,7 @@ Bee Movie
 
 <div id="header">
 
-<img src="beemovielogo.jpg">
+<img src=".jpg">
 
 </div>
 
@@ -19,10 +19,14 @@ Bee Movie
 
 <ul>
 
-<li><a href="BeeMovie.html">Home</a></li>
-<li><a href="BeeMoviejazz.html">Jazz</a></li>
-<li><a href="characterspage.html">Characters</a></li>
-<li><a href="BeeMoviemovie.html">Movie</a></li>
+<li><a href="index.htm">Home</a></li>
+<li><a href="images.htm">Images</a></li>
+<li><a href="usable.htm">Usable</a></li>
+<li><a href="web.htm">Web</a></li>
+<li><a href="platform.htm">Platform</a></li>
+<li><a href="principles.htm">Principles</a></li>
+<li><a href="resources.htm">Resources</a></li>
+
 
 </ul>
 
@@ -31,12 +35,10 @@ Bee Movie
 <div class="sideright">
 
 
-<h2>Cool Jazz</h2>
+<h2>Types of Resources</h2>
 
 <ul>
-<li><a href="https://www.youtube.com/watch?v=YyCAEcXcXL4" link="white" vlink="pink" alink="yellow">Do You Like Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=2S3mlXP8SKU" link="white" vlink="pink" alink="yellow">Jazz Music</a></li>
-<li><a href="https://www.youtube.com/watch?v=DW10gU0Rr1M" link="white" vlink="pink" alink="yellow">More Jazz Music</a></li>
+<li></li>
 
 </ul>
 
@@ -56,28 +58,14 @@ Bee Movie
 
 </div>
 
-<div>
-<audio id="audio_play">
-    <source src="White power.mp3" type="audio/mp3" />
-</audio>
-<img class="imagesidebar" src="clickforjazz.jpg" height="300px" onClick="document.getElementById('audio_play').play(); return false;" />
-
-
-</div>
-
 <div class="main">
 
 
-<h1>Jazz</h1> 
-
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady.</p>
+<h1>Resources</h1> 
 
 <p></p>
 
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady. Berry has a crush on the women from the first moment he laid eyes on here.</p>
-
-
-
+<p></p>
 
 </div>
 
