--- a/web.htm
+++ b/web.htm
@@ -10,8 +10,9 @@ Web Specific Issues
 <body>
 
 <div id="header">
+<h3>Web-Specific Issues</h3>
 
-<img src=".jpg">
+
 
 </div>
 
@@ -34,28 +35,18 @@ Web Specific Issues
 <div class="sideright">
 
 
-<h2></h2>
+<h2>Specific Issues</h2>
 
 <ul>
-<li></li>
-<li></li>
-<li></li>
+<li>Audiance</li>
+<li>Connections</li>
+<li>Browser Size</li>
+<li>Staying Relevant</li>
 
 </ul>
 
 
-<h2></h2>
-</div>
-<div class="sideright">
 
-<h2></h2>
-
-<ul>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-</ul>
 
 </div>
 
@@ -69,17 +60,26 @@ Web Specific Issues
 <div class="main">
 
 
-<h1></h1> 
-
-<p></p>
+<h1>Target Audiance</h1> 
 
 <p>
+Here you want to decide who the cite is for. Some examples include the PBS kids cite which as you can guess by the name is a cite geared more for children.
 </p>
 
+<h1> Connections </h1>
 <p>
+People all over the world have different internet speeds. Make sure you use small image sizes so it doesn't take forever for people to load your cite.
 </p>
 
+<h1>Browser Size</h1>
+<p>
+Make sure that your website can fit on many different sized screens. People now have bigger computers and phones. So it is important every device can see the website easily.
+</p>
 
+<h1>Medium-Updating</h1>
+<p>
+This part is important in making sure your cite is up to date with current information. If you don't change your website with new content people won't visit your website. Imagine if you went to ESPN for your favorite basketball team's score and they only had scores from two years ago? Would you come back? The answer is no, and this is why you update your cite.
+</p>
 
 
 </div>
@@ -89,10 +89,10 @@ Web Specific Issues
 
 <ul>
 
-<li><a href="">Home</a></li>
-<li><a href=""> Design </a></li>
-<li><a href="">Tips</a></li>
-<li><a href="">About</a></li>
+<li><a href="index.htm">Home</a></li>
+<li><a href="principles.htm"> Design </a></li>
+<li><a href="resources.htm">Tips</a></li>
+<li><a href="index.htm">About</a></li>
 
 </ul>
 
