--- a/web.htm
+++ b/web.htm
@@ -38,7 +38,7 @@ Web Specific Issues
 <h2>Specific Issues</h2>
 
 <ul>
-<li>Audiance</li>
+<li>Audience</li>
 <li>Connections</li>
 <li>Browser Size</li>
 <li>Staying Relevant</li>
@@ -52,7 +52,7 @@ Web Specific Issues
 
 <div>
 
-<img class="imagesidebar" src=".jpg" >
+<img class="imagesidebar" src="pbs.jpg" >
 
 
 </div>
@@ -60,7 +60,7 @@ Web Specific Issues
 <div class="main">
 
 
-<h1>Target Audiance</h1> 
+<h1>Target Audience</h1> 
 
 <p>
 Here you want to decide who the cite is for. Some examples include the PBS kids cite which as you can guess by the name is a cite geared more for children.
