--- a/images.htm
+++ b/images.htm
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Bee Movie
+image use
 </title>
 <link type="text/css" rel="stylesheet" href="Findingnemo.css" />
 </head>
@@ -11,18 +11,20 @@ Bee Movie
 
 <div id="header">
 
-<img src="beemovielogo.jpg">
-
+<center><h1> Images </h1></center>
 </div>
 
 <div id="navbar">
 
 <ul>
 
-<li><a href="BeeMovie.html">Home</a></li>
-<li><a href="BeeMoviejazz.html">Jazz</a></li>
-<li><a href="characterspage.html">Characters</a></li>
-<li><a href="BeeMoviemovie.html">Movie</a></li>
+<li><a href="Home.htm">Home</a></li>
+<li><a href="Principles.htm">Principles</a></li>
+<li><a href="platform.htm">Platform</a></li>
+<li><a href="Images.htm">Images</a></li>
+<li><a href="Usable.htm">Usable</a></li>
+<li><a href="Web.htm">Web</a></li>
+<li><a href="Resources.htm">Resources</a></li>
 
 </ul>
 
@@ -31,51 +33,33 @@ Bee Movie
 <div class="sideright">
 
 
-<h2>Cool Jazz</h2>
-
-<ul>
-<li><a href="https://www.youtube.com/watch?v=YyCAEcXcXL4" link="white" vlink="pink" alink="yellow">Do You Like Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=2S3mlXP8SKU" link="white" vlink="pink" alink="yellow">Jazz Music</a></li>
-<li><a href="https://www.youtube.com/watch?v=DW10gU0Rr1M" link="white" vlink="pink" alink="yellow">More Jazz Music</a></li>
-
-</ul>
+<h2> good image use example </h2>
 
 
-<h2>Types of Jazz</h2>
+<center> <img src="Mosque.jpg" /> </center>
+
+<h2></h2>
 </div>
-<div class="sideright">
 
-<h2>Different Types of Jazz</h2>
+	<div class="sideright">
 
-<ul>
-<li><a href="https://en.wikipedia.org/wiki/List_of_jazz_genres" link="white" vlink="pink" alink="yellow">Jazz?</a></li>
-<li><a href="https://www.youtube.com/watch?v=VIl7H40l3mo" link="white" vlink="pink" alink="yellow">Guitar Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=XX5cz6PLm3w" link="white" vlink="pink" alink="yellow">Key Board Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=k3_tw44QsZQ" link="white" vlink="pink" alink="yellow">Saxophone Jazz</a></li>
-</ul>
+<h2> bad image use example </h2>
+<img src="coolphoto.jpg" />
 
 </div>
 
-<div>
-<audio id="audio_play">
-    <source src="White power.mp3" type="audio/mp3" />
-</audio>
-<img class="imagesidebar" src="clickforjazz.jpg" height="300px" onClick="document.getElementById('audio_play').play(); return false;" />
-
-
-</div>
 
 <div class="main">
 
 
-<h1>Jazz</h1> 
+<h1></h1> 
 
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady.</p>
-
-<p></p>
-
-<p>The reason I talked about liking jazz is because in the bee movie Berry asked the girl if "she likes jazz." Jazz is very soothing to listen too just cause its calming and its very nice music. Berry brings it up in the movie to start a conversation with the lady. Berry has a crush on the women from the first moment he laid eyes on here.</p>
-
+<p>On this page you will see that on right there are obviously examples. This page is pretty self-explanatory if you don't know what this page is about read the next paragraph.</p>
+<br>
+<p>Okay so this page is about image use. There are good ways to use it and bad ways. It really depends on your webpage. There are different many ways to poisons your picture on the page. But again it depends on your webpage.
+</p>
+<br>
+<p> Now you may think that bad image use example looks good but I don't. It really comes down to the webpage and another thing to think about is the size of the image. If you can change the size to something smaller and it still looks good then you should make it smaller. I hope you understand what I’m trying to tell you on this webpage.</p>  
 
 
 
@@ -84,14 +68,7 @@ Bee Movie
 
 <div id="footer">
 
-<ul>
 
-<li><a href="">Home</a></li>
-<li><a href="">Characters </a></li>
-<li><a href="">Bee movie</a></li>
-<li><a href="">Jazz</a></li>
-<li><a href="">Movie</a></li>
-</ul>
 
 &copy; 2020 yalikejazz.gov All Rights Reserved
 
