--- a/resources.htm
+++ b/resources.htm
@@ -11,7 +11,7 @@ Resources
 
 <div id="header">
 
-<img src=".jpg">
+<center><h1>Design Tips</h1></center>
 
 </div>
 
@@ -38,23 +38,15 @@ Resources
 <h2>Types of Resources</h2>
 
 <ul>
-<li></li>
-
+<li>Online Article</li>
+<li>Videos</li>
+<li>Books</li>
 </ul>
 
-
-<h2>Types of Jazz</h2>
 </div>
-<div class="sideright">
+<div class="imagesidebar">
 
-<h2>Different Types of Jazz</h2>
-
-<ul>
-<li><a href="https://en.wikipedia.org/wiki/List_of_jazz_genres" link="white" vlink="pink" alink="yellow">Jazz?</a></li>
-<li><a href="https://www.youtube.com/watch?v=VIl7H40l3mo" link="white" vlink="pink" alink="yellow">Guitar Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=XX5cz6PLm3w" link="white" vlink="pink" alink="yellow">Key Board Jazz</a></li>
-<li><a href="https://www.youtube.com/watch?v=k3_tw44QsZQ" link="white" vlink="pink" alink="yellow">Saxophone Jazz</a></li>
-</ul>
+<img src="resources.jpg" width="300px" />
 
 </div>
 
@@ -63,25 +55,15 @@ Resources
 
 <h1>Resources</h1> 
 
-<p></p>
-
-<p></p>
+<p>A good way to find resources would be the internet. There are pretty much unlimited sources and they're really easy to find. Another good way to find resources would be YouTube videos. There are multiple tutorials on how to do things on YouTube. Books would also be a good resource, although it may be harder to find information or a tutuorial from a book.</p>
 
 </div>
 
 
 <div id="footer">
 
-<ul>
 
-<li><a href="">Home</a></li>
-<li><a href="">Characters </a></li>
-<li><a href="">Bee movie</a></li>
-<li><a href="">Jazz</a></li>
-<li><a href="">Movie</a></li>
-</ul>
-
-&copy; 2020 yalikejazz.gov All Rights Reserved
+&copy; 2020 designtips.gov All Rights Reserved
 
 </div>
 
