--- a/images.htm
+++ b/images.htm
@@ -11,7 +11,7 @@ image use
 
 <div id="header">
 
-<center><h1> Images </h1></center>
+<h3> Design Tips </h3>
 </div>
 
 <div id="navbar">
@@ -52,7 +52,7 @@ image use
 <div class="main">
 
 
-<h1></h1> 
+<h1> Image useage </h1> 
 
 <p>On this page you will see that on right there are obviously examples. This page is pretty self-explanatory if you don't know what this page is about read the next paragraph.</p>
 <br>
