--- a/index.htm
+++ b/index.htm
@@ -1,23 +1,78 @@
 <html>
 <head>
-<title><h1>
+<title>
 Computer HTML
-</title></h1>
+</title>
+<link type="text/css" rel="stylesheet" href="Findingnemo.css" />
 </head>
-<body bgcolor="silver">
-<center><img src="ad.Jpg"></center>
-<br />
 
-<hr />
-<center><a href=>| Design Principles</a> |         
-<a href=>Cross-Platform Issues</a> |
-<a href=>Accessible & Useable</a> |
-<a href=>Web Specific Issues</a> |
-<a href=>Image Use</a> |
-<a href=>Loctaing Resources</a> |
-</center>
-<hr />
+<body>
 
-<h1>Contrast</h1>
+<div id="header">
+<h3>
+Design Tips
+</h3>
 
-</body>
+<img src=>
+
+</div>
+
+<div id="navbar">
+
+<ul>
+
+<li><a href="index.htm">Home</a></li>
+<li><a href="images.htm">Principles</a></li>
+<li><a href="web page cross platform issues/cross platform issues.html">Platform</a></li>
+<li><a href="web.htm">Images</a></li>
+<li><a href="platform.htm">Accessible and usable</a></li>
+<li><a href="principles.htm">Web</a></li>
+<li><a href="resources.htm">Resources</a></li>
+
+
+</ul>
+
+</div>
+
+<div class="sideright">
+
+<img src= "ad.jpg"width=260px>
+
+</div>
+
+
+<div class="main"> 
+
+<h2>Contrast</h2>
+
+<p>
+Contrast is a powerful design concept. It simply means difference. When creating a webpage, one should no when to use the same image perhaps, or whether to differ the two images.</p>
+ 
+<h1>Repitition</h1>
+
+<p>
+Repitition is used to make the viewer easily comprehend your website. Such s having light text with a dark background or dark text with a light background. If a web page has a light background with light text that is BAD Repitition.</p>
+
+<h1>Alignment</h1>
+
+<p>
+A Web-Page designer will need to understand the meaning of alignment before he/she can even begin developing the URL page. Alignment is a key thing that we must understand. We use Alignment to organize the text within the page to make it easier on the eyes of the viewer.</p>
+
+<h1>Proximity</h1>
+
+<p>
+Proximity is another key element of building a web page. A web page designer needs to realize whether he/she has to move perhaps an image further or closer. Using this key word will allow people to easily decipher what kind of images and text is on your page.</p>
+
+</div>
+
+<div id="footer">
+&copy; 2017 Computer HTML All Rights Reserved
+
+</div>
+
+
+
+
+
+</body
+</html>
